# Trust_Metric_Aggregator_Microservice

./: .env.TEMPLATE  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: utils.py
app/attributes/: performance.py  query.py
app/configuration/: database.py  performance.yml  settings.py
app/models/: graphql_schema.py  sql_models.py
attributes/: performance.py  query.py
models/: graphql_schema.py
test_service/: docker-compose.yml
test_service/prometheus/: ping_exporter.yml  prometheus.yml
test_service/webserver/: app.py
